tests/ui/macos/objc_missing_selector.stderr
error: missing required `selector` argument
 --> tests/ui/macos/objc_missing_selector.rs:4:22
  |
4 | unsafe extern "C" fn missing_selector() -> usize {
  |                      ^^^^^^^^^^^^^^^^
